--- a/NTier_Final/appsettings.json
+++ b/NTier_Final/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=NTier_Final;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
-    "IdentityConnection": "Server=.\\SQLEXPRESS;Database=NTier_Final_Identity;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=NTier_Final_Identity;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   }
 }
